tests/files/invalid/unclosed_comment.yumly
;> this error should be origin from tokenizer